# ArchLensyst

./: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  ARCHITECTURE.md  App.tsx  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  QUICK_START.md  STYLE_GUIDE.md  SUBMISSION.md  TEST_SUITE.md  UI_ENHANCEMENT_REPORT.md  UI_REDESIGN_FINAL.md  constants.tsx  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  render.yaml  tailwind.config.js  turbo.json  types.ts
.github/workflows/: archlens-guard.yml
apps/edge/: package.json  wrangler.toml
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
components/: AuditView.tsx  CodeEditor.tsx  Dashboard.tsx  DependencyGraph.tsx  DeveloperPersonaMirror.tsx  HeroLanding.tsx  Icons.tsx  LegalSentinel.tsx  NewcomerGuideView.tsx  PayPalPayment.tsx  PipelineView.tsx  RefactoringHub.tsx  ReliabilityHub.tsx  SecurityHub.tsx  SemanticSearch.tsx  SovereignVault.tsx  StructuralForge.tsx  Terminal.tsx  UpgradeModal.tsx
infra/deploy/: production.yaml
infra/k8s/: api-gateway.yaml  configmap.yaml  namespace.yaml  services.yaml
infra/observability/: alerting-rules.yaml  prometheus.yml
scripts/: test-backend.ps1
server/api-gateway/: Dockerfile  go.mod
server/audit/: Dockerfile  pom.xml
server/cognitive/: Dockerfile  pyproject.toml
server/cognitive/app/: config.py  main.py
server/cognitive/app/routers/: analysis.py  embeddings.py  health.py
server/parser/: Cargo.toml  Dockerfile  build.rs
server/parser/proto/: parser.proto
server/parser/src/: main.rs  service.rs
services/: autoFixerService.ts  databaseService.ts  dependencyAuditService.ts  geminiService.ts  legalComplianceService.ts  membershipService.ts  performanceOptimizerService.ts  projectOverviewService.ts  ragService.ts  securityGapScannerService.ts  staticAnalysisRulesService.ts  supplyChainAuditService.ts  wasmParserService.ts
src/: index.css  vite-env.d.ts
(+83 files in other folders)
