[project]
name = "archlens-cognitive"
version = "1.0.0"
description = "ArchLens Gemini Cognitive Core — AI-powered architectural analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "google-generativeai>=0.4.0",
    "redis>=5.0.0",
    "elasticsearch[async]>=8.12.0",
    "kafka-python-ng>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
