[package]
name = "archlens-parser"
version = "1.0.0"
edition = "2021"
description = "ArchLens WASM Parser — Multi-language AST generation and code skeleton extraction"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.22"
opentelemetry-otlp = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "archlens-parser"
path = "src/main.rs"
